[package]
name = "ssegpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.14.3"
axum = { version = "0.6.20", features = ["macros", "multipart", "tokio", "headers", "ws"] }
futures = "0.3.28"
tokio-stream = { version = "0.1.14", features = ["full"] }
headers = "0.3"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
futures-util = "0.3.28"
async-stream = "0.3.5"
