[package]
name = "ssegpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.17.1"
axum = { version = "0.7.1", features = ["macros", "multipart", "tokio", "ws"] }
futures = "0.3.29"
tokio-stream = { version = "0.1.14", features = ["full"] }
headers = "0.4"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures-util = "0.3.29"
async-stream = "0.3.5"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
